<resources>
    <string name="app_name">InstaSaver</string>
    <string name="home">Home</string>
    <string name="instagram">Instagram</string>
    <string name="downloads">Downloads</string>
    <string name="omnicoder_caption">Do you agree?? Double Tap ❤️ and Follow @theomnicoder for Daily Funny Programming and Computer Science Memes󰞵 ➡️Follow: @theomnicoder ➡️Follow: @theomnicoder ➡️Follow: @theomnicoder . . . . . #datastructure #algorithm #dsa #programminglanguage #javadeveloper #webprogramming #softwaretesting #programmingislife #androiddeveloper #fullstackdeveloper #programmingjokes #programminghumor #codingpics #codingmemes #softwaredevelopment #programmingmemes #programmerslife #developerlife #codingisfun #softwareengineer #softwareengineering #programminglife #programmerlife #html5 #codingproblems #programmersday #mobiledeveloper</string>
    <string name="open_in_instagram">Open In Instagram</string>
    <string name="delete">Delete</string>
    <string name="view_more">View More</string>
    <string name="title_activity_search_stories">SearchStoriesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edittext_hint">Enter username or paste story url</string>
    <string name="dp_hint">Enter username or paste profile url</string>
    <string name="user_hint">Enter username</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="searching">Searching…</string>
    <string name="download">Download</string>
    <string name="story_downloader">Story Downloader</string>

    <string name="title_grant_Permission">Grant Permission</string>
    <string name="message_grant_Permission">Please grant all permissions to access additional functionality.</string>
    <string name="goto_setting">Go to setting</string>
    <string name="cancel">Cancel</string>
    <string name="logged_in_check">Click here After you are logged in</string>
    <string name="imageView">ImageView</string>
    <string name="ig_title">Hold On!</string>
    <string name="ig_desc">Unfortunately Instagram don\'t allow downloading more than 3-4 posts at once without login.</string>
    <string name="ig_suggest">You can login with a instagram account or you can wait 12hr to download again without login.</string>
    <string name="ig_note">Note: We do no store your login information. But if you are still worried, You can just use any of your secondary or temporary instagram account. It not necessary to use your main account</string>
    <string name="ig_login">Login with Instagram</string>
    <string name="ig_wait">I will wait</string>

    <string name="no_stories_found">No Stories Found!</string>
    <string name="downloading_media">Downloading media....</string>
    <string name="download_desc">Your Downloaded posts will appear here.</string>
    <string name="caption">Caption</string>
    <string name="copy_all">Copy All</string>
    <string name="copy_hashtags">Copy Hashtags</string>
    <string name="copy_username">Copy Username</string>

    <string name="paste_url">Paste url here</string>
    <string name="download_complete">Download completed</string>
    <string name="already_downloaded">Already Downloaded</string>
    <string name="start_download">Start download</string>
    <string name="invalid_link">Invalid link!</string>
    <string name="no_acc_found">No account found</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="current_stories">Current stories</string>
    <string name="no_download_data">Your Downloaded posts will appear here.</string>
    <string name="please_wait">Please wait. It will take a few seconds</string>
    <string name="post_deleted">Post deleted successfully</string>

    <string name="downloaded_media_files">Downloaded Media Files</string>

    <string name="show_more">More</string>
    <string name="show_less">Less</string>

    <string name="video_option">Video</string>
    <string name="photo_option">Photo</string>
    <string name="collection_option">Carousel</string>
    <string name="cookie_expired">Your Instagram cookie has been expired, please login to refresh it.</string>
    <string name="user_profile">User Profile</string>
    <string name="all_posts">All Posts</string>
    <string name="full_name">Full Name</string>
    <string name="post_count">posts</string>
    <string name="follower_count">followers</string>
    <string name="following_count">following</string>
    <string name="select_all">Select</string>
    <string name="select_none">You still have not selected any file yet</string>
    <string name="file_already_exist">This post is already in your device</string>
    <string name="file_downloaded_successfully">Your post is downloaded successfully</string>
    <!--    downloaded stories-->
    <string name="no_highlight_stories">No highlight stories</string>
    <string name="no_current_stories">No current stories</string>

</resources>