<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:id="@+id/copyAll2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        style="@style/CustomTextStyleSemiBold16sp"
        android:text="@string/caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/captionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@color/white"
        android:fadeScrollbars="false"
        android:maxLines="8"
        android:padding="@dimen/_8sdp"
        android:scrollbars="vertical"
        android:textIsSelectable="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyAll2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:contentDescription="@string/imageView"
        android:layout_height="wrap_content"
        android:src="@drawable/main_color_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/captionView" />

    <TextView
        android:id="@+id/copyAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        style="@style/CustomTextStyleMedium16sp"
        android:padding="@dimen/_12sdp"
        android:text="@string/copy_all"
        android:textColor="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/captionView" />

    <TextView
        android:id="@+id/copyHashtags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        style="@style/CustomTextStyleMedium16sp"
        android:padding="@dimen/_12sdp"
        android:text="@string/copy_hashtags"
        android:textColor="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyAll" />

    <TextView
        android:id="@+id/copyUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        style="@style/CustomTextStyleMedium16sp"
        android:padding="@dimen/_12sdp"
        android:text="@string/copy_username"
        android:textColor="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyHashtags" />


    <ViewStub
        android:id="@+id/loadingViewStub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout="@layout/loading_view_stub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

